--- a/ETL_Phyton.ipynb
+++ b/ETL_Phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCIXvdzB5fiTpbgu+24F3p",
+      "authorship_tag": "ABX9TyNtD++xbTzV8NhjjjuwtncI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,18 +23,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ViniciusLe1te/aulaBI/blob/main/ETL_Phyton.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ViniciusLe1te/aulaBI-ETL/blob/main/ETL_Phyton.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jAZGZLNLIWAL",
-        "outputId": "011da23e-a517-44ba-d45d-4d2d140b88c2"
+        "outputId": "b15232bc-46b1-4820-8863-84e4b9522b8a"
       },
       "outputs": [
         {
@@ -69,6 +69,9 @@
             "2           900.0  \n",
             "3           300.0  \n",
             "4           120.0  \n",
+            "\n",
+            "\n",
+            "\n",
             "Dados Transformados da filial 1:\n",
             "   ID do Produto                   Nome do Produto  Quantidade Vendida  \\\n",
             "0            101                Laptop Dell XPS 13                  20   \n",
@@ -98,6 +101,9 @@
             "2           900.0       7200.0  \n",
             "3           300.0       4200.0  \n",
             "4           120.0       2400.0  \n",
+            "\n",
+            "\n",
+            "\n",
             "Dados Transformados da Filial 1 (do arquivo CSV):\n",
             "   ID do Produto                   Nome do Produto  Quantidade Vendida  \\\n",
             "0            101                Laptop Dell XPS 13                  20   \n",
@@ -133,6 +139,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
+        "#extração\n",
         "vendas_filial1 = pd.read_csv('vendas_filial1.csv')\n",
         "vendas_filial2 = pd.read_excel('vendas_filial2.xlsx')\n",
         "\n",
@@ -141,21 +148,23 @@
         "print('Dados da filial 2 :')\n",
         "print(vendas_filial2.head())\n",
         "\n",
+        "#transformação\n",
         "vendas_filial1['Valor total'] = vendas_filial1['Quantidade Vendida'] * vendas_filial1['Preço Unitário']\n",
         "vendas_filial2['Valor total'] = vendas_filial2['Quantidade Vendida'] * vendas_filial2['Preço Unitário']\n",
         "\n",
-        "print(\"Dados Transformados da filial 1:\")\n",
+        "print(\"\\n\\n\\nDados Transformados da filial 1:\")\n",
         "print(vendas_filial1.head())\n",
         "print(\"\\nDados Transformados da filial 2:\")\n",
         "print(vendas_filial2.head())\n",
         "\n",
+        "#carregamento\n",
         "vendas_filial1.to_csv('vendas_filial1_transformadas.csv', index = False)\n",
         "vendas_filial2.to_csv('vendas_filial2_transformadas.csv', index = False)\n",
         "\n",
         "dados_filial1 = pd.read_csv('vendas_filial1_transformadas.csv')\n",
         "dados_filial2 = pd.read_csv('vendas_filial2_transformadas.csv')\n",
         "\n",
-        "print(\"Dados Transformados da Filial 1 (do arquivo CSV):\")\n",
+        "print(\"\\n\\n\\nDados Transformados da Filial 1 (do arquivo CSV):\")\n",
         "print(dados_filial1.head())\n",
         "print(\"\\nDados Transformados da Filial 2 (do arquivo CSV):\")\n",
         "print(dados_filial2.head())\n"
