--- a/ETL_Phyton.ipynb
+++ b/ETL_Phyton.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtD++xbTzV8NhjjjuwtncI",
+      "authorship_tag": "ABX9TyO5eziFMaFzH/lIoZKjutxg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jAZGZLNLIWAL",
-        "outputId": "b15232bc-46b1-4820-8863-84e4b9522b8a"
+        "outputId": "42e2f07a-6ee5-45bd-f8c1-5be5eab4bee0"
       },
       "outputs": [
         {
@@ -168,6 +168,136 @@
         "print(dados_filial1.head())\n",
         "print(\"\\nDados Transformados da Filial 2 (do arquivo CSV):\")\n",
         "print(dados_filial2.head())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Carregamento no Banco\n",
+        "\n",
+        "import sqlite3\n",
+        "\n",
+        "conn = sqlite3.connect('dados_transformados.db')\n",
+        "\n",
+        "vendas_filial1.to_sql('vendas_filial1_transformadas', conn, index=False, if_exists='replace')\n",
+        "vendas_filial2.to_sql('vendas_filial2_transformadas', conn, index=False, if_exists='replace')\n",
+        "\n",
+        "dados_filial1 = pd.read_sql('SELECT * FROM vendas_filial1_transformadas', conn)\n",
+        "dados_filial2 = pd.read_sql('SELECT * FROM vendas_filial2_transformadas', conn)\n",
+        "\n",
+        "print(\"\\n\\n\\nDados Transformados da Filial 1 (do banco de dados SQL):\")\n",
+        "print(dados_filial1.head())\n",
+        "print(\"\\nDados Transformados da Filial 2 (do banco de dados SQL):\")\n",
+        "print(dados_filial2.head())\n",
+        "\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LS3AmrYD1MG4",
+        "outputId": "1ac7396f-ed66-49f9-b823-5cc9d5f73c74"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "\n",
+            "Dados Transformados da Filial 1 (do banco de dados SQL):\n",
+            "   ID do Produto                   Nome do Produto  Quantidade Vendida  \\\n",
+            "0            101                Laptop Dell XPS 13                  20   \n",
+            "1            102     Smartphone Samsung Galaxy S20                  30   \n",
+            "2            103          Monitor LG UltraWide 34\"                  15   \n",
+            "3            104  Teclado Mecânico Corsair K95 RGB                  25   \n",
+            "4            105        Mouse Logitech MX Master 3                  10   \n",
+            "\n",
+            "   Preço Unitário  Valor total  \n",
+            "0          1500.0      30000.0  \n",
+            "1          1000.0      30000.0  \n",
+            "2           600.0       9000.0  \n",
+            "3           200.0       5000.0  \n",
+            "4            80.0        800.0  \n",
+            "\n",
+            "Dados Transformados da Filial 2 (do banco de dados SQL):\n",
+            "   ID do Produto                    Nome do Produto  Quantidade Vendida  \\\n",
+            "0            201         Impressora HP LaserJet Pro                  12   \n",
+            "1            202                    SSD Samsung 1TB                  18   \n",
+            "2            203              Tablet Apple iPad Pro                   8   \n",
+            "3            204  Smartwatch Samsung Galaxy Watch 4                  14   \n",
+            "4            205            Headset HyperX Cloud II                  20   \n",
+            "\n",
+            "   Preço Unitário  Valor total  \n",
+            "0           250.0       3000.0  \n",
+            "1           180.0       3240.0  \n",
+            "2           900.0       7200.0  \n",
+            "3           300.0       4200.0  \n",
+            "4           120.0       2400.0  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Verificação do arquivo dados_transformados.db\n",
+        "\n",
+        "import sqlite3\n",
+        "\n",
+        "conn = sqlite3.connect('dados_transformados.db')\n",
+        "\n",
+        "cursor = conn.cursor()\n",
+        "\n",
+        "cursor.execute('SELECT * FROM vendas_filial1_transformadas')\n",
+        "\n",
+        "dados_filial1 = cursor.fetchall()\n",
+        "\n",
+        "print(\"Dados transformados da Filial 1:\")\n",
+        "for linha in dados_filial1:\n",
+        "    print(linha)\n",
+        "\n",
+        "cursor.execute('SELECT * FROM vendas_filial2_transformadas')\n",
+        "\n",
+        "dados_filial2 = cursor.fetchall()\n",
+        "\n",
+        "print(\"Dados transformados da Filial 2:\")\n",
+        "for linha in dados_filial2:\n",
+        "    print(linha)\n",
+        "\n",
+        "cursor.close()\n",
+        "conn.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xtc1LlHP2-LA",
+        "outputId": "44bbd371-a62e-45c7-feec-c0703dc64e05"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dados transformados da Filial 1:\n",
+            "(101, 'Laptop Dell XPS 13', 20, 1500.0, 30000.0)\n",
+            "(102, 'Smartphone Samsung Galaxy S20', 30, 1000.0, 30000.0)\n",
+            "(103, 'Monitor LG UltraWide 34\"', 15, 600.0, 9000.0)\n",
+            "(104, 'Teclado Mecânico Corsair K95 RGB', 25, 200.0, 5000.0)\n",
+            "(105, 'Mouse Logitech MX Master 3', 10, 80.0, 800.0)\n",
+            "Dados transformados da Filial 2:\n",
+            "(201, 'Impressora HP LaserJet Pro', 12, 250.0, 3000.0)\n",
+            "(202, 'SSD Samsung 1TB', 18, 180.0, 3240.0)\n",
+            "(203, 'Tablet Apple iPad Pro', 8, 900.0, 7200.0)\n",
+            "(204, 'Smartwatch Samsung Galaxy Watch 4', 14, 300.0, 4200.0)\n",
+            "(205, 'Headset HyperX Cloud II', 20, 120.0, 2400.0)\n"
+          ]
+        }
       ]
     }
   ]
